# janus-2.0

./: .gitignore  AGENT-TASK.md  AGENTS.md  CLAUDE.md  COMPLEXITY-REVIEW.md  LICENSE  NDA-ENDPOINTS-VERIFICATION.md  PORT-ALLOCATION.md  README.md  REFACTOR-PERSONNEL-TO-PERSON.md  docker-compose.dev.yml  docker-compose.yml  test-nda-endpoints.sh  test-nda-manual.sh  test-relations-api.sh  verify-backend.sh  verify-frontend.sh  verify-relations-endpoints.sh
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  env.example
backend/migrations/: .gitkeep  20250127000000_add_dates_to_vendor_relations.sql  20250128000000_create_nda_table.sql  20250129000000_create_discussions_table.sql  20250129000001_create_document_references_table.sql  20250131000000_create_person_table_unified.sql  20251026112327_create_users_table.sql  20251026112329_create_personnel_table.sql  20251026112330_create_vendors_table.sql  20251026112400_seed_test_users.sql  20251026114844_create_audit_log_table.sql  20251026132437_create_computer_access_table.sql  20251026132437_create_data_access_table.sql  20251026132437_create_physical_access_table.sql  20251026132438_create_data_access_table.sql  20251026132439_create_physical_access_table.sql  20251026140000_create_info_systems_table.sql  20251026195324_create_vendor_relations_table.sql  20251026195325_add_dates_to_vendor_relations.sql  20251026195326_create_nda_table.sql  20251026195327_create_discussions_table.sql  20251030150000_add_document_reference_attachments.sql  20251030160000_create_roles_permissions.sql  20251030170000_add_nda_rejection_reason.sql  20251030171000_add_nda_send_fields.sql  20251101175000_add_department_to_vendors.sql  20251101180000_create_unified_relations_table.sql  20251101190000_add_schema_org_relation_types.sql  20251101190000_rename_vendors_to_organizations.sql  20251101191000_rename_personnel_to_person.sql  20251101192000_create_person_table_unified.sql  20251101192001_drop_old_tables_after_migration.sql  20251101192002_update_relations_entity_type.sql  20260601120000_align_nda_with_person_model.sql  20260601120100_drop_organizations_contact_email_unique.sql  20260601120200_seed_enduser_official_users.sql  20260601120300_align_audit_log_with_person_model.sql  20260601130000_create_digital_resource_tables.sql  20260601130001_seed_digital_resources.sql  (+2 more)
(+633 files in other folders)
