[package]
name = "janus-backend"
version = "2.0.0"
edition = "2021"
authors = ["Janus Development Team"]
description = "Janus 2.0 Security Clearance System - Backend API"

[lib]
name = "janus_backend"
path = "src/lib.rs"

[dependencies]
# Web framework
rocket = { version = "0.5", features = ["json"] }
rocket_cors = "0.6"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }
# WebSocket support
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Utilities
uuid = { version = "1.5", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
base64 = "0.22"
# MinIO/S3 client (compatible with Rust 1.86+)
# Using s3-tokio which is a maintained fork compatible with Rust 1.86+
s3 = { package = "s3-tokio", version = "0.39" }

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
